--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "@nuxtjs/color-mode": "^3.3.3",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt-lucide-icons": "^1.0.4",
+    "sass": "^1.74.1",
     "shadcn-nuxt": "^0.10.2",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "video.js": "^8.10.0"
   }
 }
